# pyCDFTOOLS

./: LICENCE.txt  README.md  environment.yml  pyproject.toml
brainfart_logs/: coding_diary.txt  confusing.ipynb  mesh_mask_patch.ipynb  misc_log.txt  plot_misc_ORCA2.ipynb  scarp_test_sigmamoc.ipynb  test_package_load.ipynb  xnemogcm_testing_UNAGI.ipynb
pyCDFTOOLS/: __init__.py  analysis.py  cosmetics.py  eos.py  in_out.py
test/: test_import.py
